added second color to divs in body

--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,6 @@ body {
 	font-family: 'Yanone Kaffeesatz', sans-serif; 
 }
 div {
+	background-color: #AFE6AF;
 	font-family: 'Josefin Sans', sans-serif;	
 }
