--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,27 @@ div {
 	font-family: 'Josefin Sans', sans-serif;	
 }
 
+.counter {
+  width: 300px;
+  margin: auto;
+  background: #9b59b6;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  h1 {
+    margin: 0;
+    padding: 20px;
+    font-size: 36px;
+  }
+  button {
+    background: #f1c40f;
+    border: 0;
+    box-shadow: 0px 5px 0px darken(#f1c40f, 20%);
+    padding: 20px;
+    width: 100%;
+    outline: none;
+    border-radius: 3px;
+    color: darken(#8e44ad, 10%);
+    font-weight: bold;
+  }
+}
