--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -82,7 +82,7 @@ header
     width: 75%;
 }
 
-/******************** PUSHES THE PAGE TITLE DOWN BELOW THR NAV BAR *******************/
+/******************** PUSHES THE PAGE TITLE DOWN BELOW THE NAV BAR *******************/
 .landingPageSignUp {
   margin-top: 10%;
 }
