Added delete habit function and updated db query names

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,8 +1,8 @@
 .profilepic {
   border-radius: 100%;
-  /*margin-top: 40%;*/
-  display: block;
   margin: auto;
+  margin-top: 40%;
+  display: block;
   width: 70%;
 
 }
